# ModelMatchSoftware

./: .gitignore  AbstractRoiItem.cpp  AbstractRoiItem.h  CMakeLists.txt  MatchResult.h  circleroiitem.cpp  circleroiitem.h  halconworker.cpp  halconworker.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matchresultitem.cpp  matchresultitem.h  rect1roiitem.cpp  rect1roiitem.h  roigraphicsview.cpp  roigraphicsview.h  roitoolbar.cpp  roitoolbar.h  rotrectroiitem.cpp  rotrectroiitem.h
resource/: qss.qrc
resource/Qss/: style.qss
